// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`custom separator > custom-separator add path 1`] = `
{
  "items": [],
  "name": "root",
  "path": "/",
  "relativePath": "/",
  "relativePathName": "",
  "subDirectory": {
    "a": {
      "items": [],
      "name": "a",
      "parent": [Circular],
      "path": "/a$",
      "relativePath": "a$",
      "relativePathName": "a",
      "subDirectory": {
        "b": {
          "items": [
            {
              "data": undefined,
              "ext": "ts",
              "file": "index.ts",
              "filename": "index",
              "isEntry": true,
              "parent": [Circular],
              "path": "$a$b$index.ts",
            },
            {
              "data": undefined,
              "ext": "ts",
              "file": "foo.ts",
              "filename": "foo",
              "isEntry": false,
              "parent": [Circular],
              "path": "$a$b$foo.ts",
            },
          ],
          "name": "b",
          "parent": [Circular],
          "path": "/a$b$",
          "relativePath": "b$",
          "relativePathName": "b",
          "subDirectory": {},
        },
        "z": {
          "items": [
            {
              "data": undefined,
              "ext": "ts",
              "file": "index.ts",
              "filename": "index",
              "isEntry": true,
              "parent": [Circular],
              "path": "$a$z$index.ts",
            },
          ],
          "name": "z",
          "parent": [Circular],
          "path": "/a$z$",
          "relativePath": "z$",
          "relativePathName": "z",
          "subDirectory": null,
        },
      },
    },
  },
}
`;

exports[`custom separator > custom-separator remove path 1`] = `
{
  "items": [],
  "name": "root",
  "path": "/",
  "relativePath": "/",
  "relativePathName": "",
  "subDirectory": {
    "a": {
      "items": [],
      "name": "a",
      "parent": [Circular],
      "path": "/a$",
      "relativePath": "a$",
      "relativePathName": "a",
      "subDirectory": {
        "z": {
          "items": [
            {
              "data": undefined,
              "ext": "ts",
              "file": "index.ts",
              "filename": "index",
              "isEntry": true,
              "parent": [Circular],
              "path": "$a$z$index.ts",
            },
          ],
          "name": "z",
          "parent": [Circular],
          "path": "/a$z$",
          "relativePath": "z$",
          "relativePathName": "z",
          "subDirectory": null,
        },
      },
    },
  },
}
`;

exports[`simple builder > simple-builder add path 1`] = `
{
  "items": [],
  "name": "root",
  "path": "/",
  "relativePath": "/",
  "relativePathName": "",
  "subDirectory": {
    "a": {
      "items": [],
      "name": "a",
      "parent": [Circular],
      "path": "/a/",
      "relativePath": "a/",
      "relativePathName": "a",
      "subDirectory": {
        "b": {
          "items": [
            {
              "data": undefined,
              "ext": "ts",
              "file": "index.ts",
              "filename": "index",
              "isEntry": true,
              "parent": [Circular],
              "path": "/a/b/index.ts",
            },
            {
              "data": undefined,
              "ext": "ts",
              "file": "foo.ts",
              "filename": "foo",
              "isEntry": false,
              "parent": [Circular],
              "path": "/a/b/foo.ts",
            },
          ],
          "name": "b",
          "parent": [Circular],
          "path": "/a/b/",
          "relativePath": "b/",
          "relativePathName": "b",
          "subDirectory": {},
        },
      },
    },
  },
}
`;

exports[`simple builder > simple-builder remove path 1`] = `
{
  "items": [],
  "name": "root",
  "path": "/",
  "relativePath": "/",
  "relativePathName": "",
  "subDirectory": {
    "a": {
      "items": [],
      "name": "a",
      "parent": [Circular],
      "path": "/a/",
      "relativePath": "a/",
      "relativePathName": "a",
      "subDirectory": {},
    },
  },
}
`;
